# apache-thrift-hbase-test

./: CMakeLists.txt  README.md
apache-thrift-install/include/thrift/: config.h
hbase/: CMakeLists.txt  HBaseClient.cpp  HBaseClient.h
hbase/test/: CMakeLists.txt  HBaseClientTest.cpp
